  * t/040_upgrade.t: Create and cd into an inaccessible test directory.
  * pg_upgradecluster: Chdir to / before the upgrade to avoid confusing error
    messages about inaccessible cwd.
  * debian/README.Debian: Update for 8.3 being the default version. Drop
    description of 7.4 autovacuum daemon magic, since it is obsolete now.
  * debian/postgresql-common.templates: Point to README.Debian.

 -- Martin Pitt <mpitt@debian.org>  Sun, 03 Feb 2008 13:00:58 +0100

postgresql-common (83) unstable; urgency=low

  * Drop the "If you have openssl installed..." from the package description,
    since ssl-cert depends on it.
  * t/050_encodings.t: Add alternative unicode representation 0xc827 for the
    CVE-2006-2313 test, so that the testsuite runs cleanly in Ubuntu 6.06.
  * debian/supported-versions: Drop 8.1 from fallback set of supported
    versions.
  * debian/postgresql-common.config: Add check for forcing the obsoletion
    notifications when upgrading over a particular version. This provides the
    notification when upgrading from Etch to Lenny, and when obsoleting a
    major version within unstable.
  * debian/supported-versions: Drop support for 8.2 in unstable, 8.3 is the
    version du jour.
  * debian/supported-versions: Drop Ubuntu 5.10, fix a typo in the versions
    for Ubuntu 6.06.
  * t/090_multicluster.t: Test correct behaviour of pg_service.conf. (See
    #439026)
  * debian/supported-versions: Only support 8.3 in Ubuntu 8.04.

 -- Martin Pitt <mpitt@debian.org>  Sun, 20 Jan 2008 11:08:04 +0100

postgresql-common (82) unstable; urgency=low

  * debian/control: Fix 'commmon' typo. (Closes: #449532)
  * t/030_errors.t: Check that an /etc/postgresql/postgresql.conf leftover is
    not regarded as a cluster directory. This reproduces #450565.
  * PgCommon.pm, get_versions()/get_version_clusters(): Filter out '.' and
    '..' from readdir() output. (Closes: #450565)
  * pg_ctlcluster: Use "smart" mode shutdown by default, and add option