@@ -8,8 +8,10 @@ postgresql-common (84) UNRELEASED; urgency=low
   * debian/README.Debian: Update for 8.3 being the default version. Drop
     description of 7.4 autovacuum daemon magic, since it is obsolete now.
   * debian/postgresql-common.templates: Point to README.Debian.
+  * debian/postgresql-common.cron.d: Update for 8.3, and add warnings and doc
+    pointer about enabling regular VACUUM FULL. (LP: #186831)
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 03 Feb 2008 13:00:58 +0100
+ -- Martin Pitt <mpitt@debian.org>  Sun, 03 Feb 2008 13:15:39 +0100
 
 postgresql-common (83) unstable; urgency=low
 
